# RMAP-Server

./: README.md  pyproject.toml  usage_example.py
src/rmap/: compat_helpers.py  identity_manager.py  rmap.py  rmap_client.py
testassets/: server_priv.asc  server_pub.asc
testassets/clients/: Alice.asc  Alice_private.asc  Jean.asc  Jean_private.asc
tests/: test_identity_manager.py  test_rmap.py
